--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Om mig</title>
 </head>
+
 <body>
 
-    <h1 style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: 200%;"> OM ANTIPAROS </h1>
+    <h1
+        style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: 200%;">
+        OM ANTIPAROS </h1>
 
     <ul>
         <li>Liten ö i Grekland</li>
@@ -15,7 +19,12 @@
         <li>Fina stränder </li>
     </ul>
 
-    <img src="https://www.placesofjuma.com/antiparos-greece/default-18-2/" width="500" height="300" alt="Text visas om bilden är trasig" title="Antiparos" />
+    <img src="https://www.placesofjuma.com/antiparos-greece/default-18-2/" width="500" height="300"
+        alt="Text visas om bilden är trasig" title="Antiparos" />
+
+        <br>
+        <p>BLAH BLAH BLAH BLAH BLLUUUUU</p>
 
 </body>
+
 </html>
